Closed Bug 458953 Opened 16 years ago Closed 16 years ago

undef'ing LoadImage in nsSVGFilters.cpp breaks wince build

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: blassey, Assigned: blassey)

Details

(Keywords: mobile)

Attachments

(1 file)

      No description provided.
Attachment #342140 - Flags: review?(roc)
+#ifndef WINCE
 #undef LoadImage
+#endif

Wouldn't it make more sense for this to be #ifdef LoadImage?
that was my first thought.  It turns out that LoadImage exists on windows ce.  The problem is when the class calls its own version of LoadImage, it fails.  Blame bad compilers if you must...its a hack either way.
I don't get it. Does

#ifdef LoadImage
#undef LoadImage
#endif

fail to build on WinCE? What exactly does the error say?
c:/hg/mozilla-central/content/svg/content/src/nsSVGFilters.cpp(5314) : error C3861: 'LoadImage': identifier not found
What if you qualify LoadImage with "nsImageLoadingContent::"?
with #if defined(XP_WIN) 
// Prevent Windows redefining LoadImage
#ifdef LoadImage
#undef LoadImage
#endif
#endif

and 

nsImageLoadingContent::LoadImage

I get:

c:/hg/mozilla-central/content/svg/content/src/nsSVGFilters.cpp(5314) : error C2039: 'LoadImage' : is not a member of 'nsImageLoadingContent'

with 

with #if defined(XP_WIN) 
// Prevent Windows redefining LoadImage
#ifndef WINCE
#undef LoadImage
#endif
#endif

and nsImageLoadingContent::LoadImage it compiles
Comment on attachment 342140 [details] [diff] [review]
excludes WINCE from undef

OK, but that compiler is really broken.
Attachment #342140 - Flags: superreview+
Attachment #342140 - Flags: review?(roc)
Attachment #342140 - Flags: review+
we know...
2e73030a8bec: Bug 458953 - undef'ing LoadImage in nsSVGFilters.cpp breaks wince build r=roc
diff
browse
Brad Lassey <blassey@mozilla.com> - Thu, 16 Oct 2008 10:53:36 -0400 - rev 20537
Bug 458953 - undef'ing LoadImage in nsSVGFilters.cpp breaks wince build r=roc
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: