Bug 458953 -  undef'ing LoadImage in nsSVGFilters.cpp breaks wince build r=roc